# g2

./: .gitignore  .readthedocs.yaml  README.md  TEST_README.md  agn_disk_models.py  agn_source_models.py  example_demonstration.py  fisher_analysis.py  intensity_interferometry.py  intensity_interferometry_core.py  inverse_noise_chaotic.py  observation_simulator.py  paper_equations_demo.py  plot_sn2011fe_sedona.py  plots_source.py  pyproject.toml  run_all_tests.py  setup.py  source.py  supernova_models.py  telescope_arrays.py  test_fisher_distance_precision.py  test_ii_telescopes_results.py  test_paper_equations.py  test_sn2011fe_sedona.py  test_source.py  test_tardis_sedona_models.py
data/: WaveGrid.npy
docs/: requirements.txt
docs/examples/: examples_source.py  uniform_disk.py
docs/source/: api.rst  conf.py  index.rst  usage.rst
g2/: __init__.py  core.py  inverse_noise_chaotic.py  source.py
g2/models/: __init__.py
g2/models/base/: __init__.py  source.py
g2/models/sources/: __init__.py  agn.py  grid_source.py  simple.py
g2/sources/: __init__.py  agn.py  grid_source.py  sn2011fe_sedona.py
import/: II.ipynb  betelgeuse.py  main.py  polar.ipynb  sedona.ipynb  temp.py
instructions/: visibility.txt
sources/: agn.py  plot_agn.py  plot_sn2011fe_sedona.py  sn2011fe_sedona.py  test_agn.py
src/: source.py
src/g2/: test_basic_inverse_noise.py
src/sources/: agn.py  sn2011fe_sedona.py
tests/: plot_agn.py  plot_sn2011fe_sedona.py  plot_source.py  test_agn.py  test_sn2011fe_sedona.py
