[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "g2"
version = "0.0.1"
authors = [
  { name="Alex Kim", email="author@example.com" },
]
description = "Inverse Noise Calculation for Chaotic Sources"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "jax>=0.3.0",
    "jaxlib>=0.3.0",
    "sncosmo>=2.0.0",
    "matplotlib>=3.5.0",
    "astropy>=5.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
